--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "co.japl.android.torressansebastian"
         minSdk 19
         targetSdk 31
-        versionCode 2
-        versionName "1.1-Asamblea"
+        versionCode 3
+        versionName "1.2-Asamblea-Parqueadero-pagos"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
