feature refacto code to composable
Update code to use composable all project to new arquitecture and views

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ pluginManagement {
         mavenCentral()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -13,4 +14,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "TorresSanSebastian"
+enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
 include ':app'
