--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,50 +1,102 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
 }
 
 android {
-    compileSdk 31
+    namespace "co.japl.android.torressansebastian"
+    compileSdk 34
 
     defaultConfig {
         applicationId "co.japl.android.torressansebastian"
-        minSdk 19
-        targetSdk 31
-        versionCode 6
-        versionName "Normas Propiedad Horizontal V1"
+        minSdk 26
+        targetSdk 33
+        versionCode 1_00_07
+        versionName "V1.0.7 Normas Propiedad Horizontal V1"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        vectorDrawables{
+            useSupportLibrary = true
+        }
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
+        compose true
+    }
+
+    composeOptions{
+        kotlinCompilerExtensionVersion '1.4.3'
+    }
+
+    packaging{
+        resources{
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
 dependencies {
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'android.arch.lifecycle:livedata:1.1.1'
-    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.compose.foundation:foundation:1.5.4'
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.activity:activity-compose:1.8.1'
+
+    implementation 'androidx.core:core-ktx:1.12.0'
+
+    implementation 'androidx.compose.compiler:compiler:1.5.4'
+    implementation 'androidx.compose.material:material:1.5.4'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material:material-icons-core:1.5.4'
+    implementation 'androidx.compose.material:material-icons-extended:1.5.4'
+
+    implementation platform('androidx.compose:compose-bom:2023.03.00')
+
+    implementation("com.google.maps.android:maps-compose:2.11.4")
+    implementation("com.google.android.gms:play-services-maps:18.2.0")
+    implementation("com.google.android.play:integrity:1.3.0")
+
+    implementation("io.coil-kt:coil-compose:2.5.0")
+
+    implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+
+    implementation 'androidx.compose.runtime:runtime-rxjava3:1.5.4'
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+
+    implementation("androidx.hilt:hilt-navigation-compose:1.1.0")
+
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.compose.ui:ui-tooling'
+    androidTestImplementation 'androidx.compose.ui:ui-test-manifest'
+    androidTestImplementation platform("androidx.compose:compose-bom:2023.03.00")
+    // For instrumentation tests
+
 }
+
