--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.japl.android.torressansebastian">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -13,7 +12,7 @@
         android:theme="@style/Theme.TorresSanSebastian">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Main"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TorresSanSebastian.NoActionBar">
