--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ android {
 
 dependencies {
 
+    implementation project(":UI")
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.compose.foundation:foundation:1.5.4'
     implementation 'androidx.compose.ui:ui'
