--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ dependencyResolutionManagement {
 rootProject.name = "TorresSanSebastian"
 enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
 include ':app'
+include ':UI'
