feature refacto code to composable
added home, contactus and schedule, in home was setting some default image on it in carousel

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
 dependencies {
 
     implementation project(":UI")
+    implementation(project(":ScheduleModule"))
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.compose.foundation:foundation:1.5.4'
