--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 
 }
 
@@ -55,6 +57,7 @@ dependencies {
 
     implementation project(":UI")
     implementation(project(":ScheduleModule"))
+    implementation(project(":japl-android-about-module"))
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.compose.foundation:foundation:1.5.4'
@@ -79,6 +82,10 @@ dependencies {
     implementation("com.google.android.play:integrity:1.3.0")
 
     implementation("io.coil-kt:coil-compose:2.5.0")
+
+    implementation("com.google.dagger:hilt-android:2.48")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
     implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
