--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
 include ':app'
 include ':UI'
 include ':ScheduleModule'
+include ':japl-android-about-module'
