--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "co.japl.android.torressansebastian"
         minSdk 26
         targetSdk 33
-        versionCode 1_00_08
-        versionName "V1.00.08 Cambio de interface grafica"
+        versionCode 1_00_09
+        versionName "V1.00.09 Cambio nombre en las opciones del menu debido a que estaban en ingles y un refactor de la pagina principal"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables{
