--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "co.japl.android.torressansebastian"
         minSdk 26
         targetSdk 33
-        versionCode 1_00_09
-        versionName "V1.00.09 Cambio nombre en las opciones del menu debido a que estaban en ingles y un refactor de la pagina principal"
+        versionCode 1_00_10
+        versionName "V1.00.10 Se arregla botones de email en contactos ya que no funcionaban"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables{
