--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 android.defaults.buildfeatures.buildconfig=true
-android.nonFinalResIds=false
+android.nonFinalResIds=true
 android.enableJetifier=true
