feature refacto code to composable
git ignore files

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+/ScheduleModule/japl-android-schedule-module/
+/TorresSanSebastian.zip
+/app/release/app-release.aab
+/ScheduleModule/japl-android-schedule-module/
