resease pqrs trask documents
Added new task, general and billing pqrs view to fill out google forms (link to google forms) , added documents task to see documents upload by administrator URTSS, and folder to get images upload by URTSS from Google Drive

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,12 @@ android.useAndroidX=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=true
 android.enableJetifier=true
+FOLDER_ID="1QrdfGX3EvIwn6xuU_XkUtUVk4kCM4mlz"
+FOLDER_IMG_ID="103hskrx0o8C10Ncu5KaTxyMPFkwCVFGX"
+URL_INITIAL="https://drive.google.com/uc?export=download&id="
+APPLICATION_NAME="TorresSanSebastian"
+MIME_TYPE_IMAGE="mimeType='image/jpeg'"
+GOOGLE_APPLICATION_CREDENTIALS="torressansebastian-bf1036b1e939.json"
+CAROUSEL_HOME_DRIVE="true"
+CAROUSEL_HOME_JSON="true"
+CAROUSEL_HOME_LOCAL="true"
