--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':UI'
 include ':ScheduleModule'
 include ':japl-android-about-module'
 include ':urtss-android-core'
+include ':connect-gdrive'
+include ':japl-android-graphs'
