--- a/UI/build.gradle
+++ b/UI/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'co.com.jap.ui'
+    namespace 'co.com.japl.ui'
     compileSdk 34
 
     defaultConfig {
@@ -36,27 +36,37 @@ android {
 }
 
 dependencies {
+    implementation(project(":japl-android-graphs"))
 
-    implementation("androidx.core:core-ktx:1.12.0")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
-    implementation("androidx.activity:activity-compose:1.8.1")
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
+    implementation("androidx.compose.ui:ui-tooling:1.5.4")
     implementation("androidx.compose.ui:ui-tooling-preview")
-    implementation("androidx.compose.material3:material3")
-    implementation("androidx.compose.material:material:1.5.4")
-    implementation("com.google.maps.android:maps-compose:2.11.4")
-
+    implementation("androidx.compose.runtime:runtime-livedata:1.5.4")
+    implementation("androidx.compose.runtime:runtime-rxjava2:1.5.4")
     implementation(platform("androidx.compose:compose-bom:2023.03.00"))
+
+    implementation 'com.google.android.material:material:1.10.0'
+
+    implementation("androidx.compose.material:material:1.5.4")
+    implementation("androidx.compose.material:material-icons-extended:1.5.4")
+    implementation("androidx.compose.material:material-icons-core:1.5.4")
+    implementation("androidx.compose.material3:material3")
+    implementation("androidx.compose.material3:material3-window-size-class:1.1.2")
+
+
+    implementation("com.google.maps.android:maps-compose:2.11.4")
 
     implementation("io.coil-kt:coil-compose:2.5.0")
 
-    implementation("com.google.android.material:material:1.10.0")
+    implementation("androidx.core:core-ktx:1.12.0")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2")
+    implementation("androidx.activity:activity-compose:1.8.1")
     implementation("androidx.appcompat:appcompat:1.6.1")
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation("androidx.navigation:navigation-ui-ktx:2.7.5")
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
