--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.firebase.crashlytics'
 
 }
 
@@ -14,8 +16,8 @@ android {
         applicationId "co.japl.android.torressansebastian"
         minSdk 26
         targetSdk 33
-        versionCode 1_00_19
-        versionName "V1.00.19 Se agrega link directo a la tarjeta de información de la aplicación en google play"
+        versionCode 1_01_9_30
+        versionName "V1.01.9 build 30 Se agrega pantallas para pqrs y visualizador de archivos"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables{
@@ -25,8 +27,14 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            shrinkResources true
+            minifyEnabled true
+           proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -36,6 +44,14 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
     }
+
+    composeOptions{
+        kotlinCompilerExtensionVersion '1.4.3'
+    }
+    buildFeatures {
+        compose true
+    }
+
     buildFeatures {
         viewBinding true
         buildConfig true
@@ -49,7 +65,11 @@ android {
     packaging{
         resources{
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += 'jetified-httpclient-4.5.14.jar'
         }
+    }
+    packagingOptions{
+        exclude 'META-INF/DEPENDENCIES'
     }
 }
 
@@ -59,8 +79,12 @@ dependencies {
     implementation(project(":ScheduleModule"))
     implementation(project(":japl-android-about-module"))
     implementation(project(":urtss-android-core"))
+    implementation(project(":connect-gdrive"))
 
     implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
+    implementation 'androidx.credentials:credentials:1.2.2'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.2.2'
     implementation 'androidx.compose.foundation:foundation:1.5.4'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -82,15 +106,23 @@ dependencies {
     implementation("com.google.android.gms:play-services-maps:18.2.0")
     implementation("com.google.android.play:integrity:1.3.0")
 
+    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    implementation("com.google.api-client:google-api-client-android:2.0.0")
+
+    implementation("com.google.firebase:firebase-crashlytics-ktx")
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-database-ktx")
+
+
     implementation("io.coil-kt:coil-compose:2.5.0")
 
     implementation("com.google.dagger:hilt-android:2.48")
-    kapt("com.google.dagger:hilt-android-compiler:2.44")
-    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+    kapt("com.google.dagger:hilt-android-compiler:2.48")
+    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
 
     implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
 
     implementation 'androidx.compose.runtime:runtime-rxjava3:1.5.4'
 
@@ -106,7 +138,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.compose.ui:ui-tooling'
     androidTestImplementation 'androidx.compose.ui:ui-test-manifest'
-    androidTestImplementation platform("androidx.compose:compose-bom:2023.03.00")
+    androidTestImplementation platform("androidx.compose:compose-bom:2024.04.01")
     // For instrumentation tests
 
 }
