--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
+<!--android:name=".Application"-->
     <application
         android:name=".Application"
         android:allowBackup="true"
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:targetApi="31">
+        tools:targetApi="34">
 
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCXLQfcG77akGYyJGTtGb-alx44VGiFWMQ"/>
 
