--- a/gradle.properties
+++ b/gradle.properties
@@ -23,14 +23,11 @@ android.nonFinalResIds=true
 android.enableJetifier=true
 FOLDER_ID="1QrdfGX3EvIwn6xuU_XkUtUVk4kCM4mlz"
 FOLDER_IMG_ID="103hskrx0o8C10Ncu5KaTxyMPFkwCVFGX"
+FOLDER_ID_DOC="1QrdfGX3EvIwn6xuU_XkUtUVk4kCM4mlz"
 URL_INITIAL="https://drive.google.com/uc?export=download&id="
 APPLICATION_NAME="TorresSanSebastian"
 MIME_TYPE_IMAGE="mimeType='image/jpeg'"
 GOOGLE_APPLICATION_CREDENTIALS="torressansebastian-bf1036b1e939.json"
 CAROUSEL_HOME_DRIVE="true"
 CAROUSEL_HOME_JSON="true"
-<<<<<<< HEAD
 CAROUSEL_HOME_LOCAL="true"
-=======
-CAROUSEL_HOME_LOCAL="true"
->>>>>>> stash
