--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,9 +106,9 @@ dependencies {
     implementation("com.google.android.gms:play-services-maps:18.2.0")
     implementation("com.google.android.play:integrity:1.3.0")
 
-    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    implementation platform('com.google.firebase:firebase-bom:33.3.0')
     implementation("com.google.api-client:google-api-client-android:2.0.0")
-
+    implementation('com.google.firebase:firebase-messaging-ktx')
     implementation("com.google.firebase:firebase-crashlytics-ktx")
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation("com.google.firebase:firebase-database-ktx")
@@ -138,7 +138,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.compose.ui:ui-tooling'
     androidTestImplementation 'androidx.compose.ui:ui-test-manifest'
-    androidTestImplementation platform("androidx.compose:compose-bom:2024.04.01")
+    androidTestImplementation platform("androidx.compose:compose-bom")
     // For instrumentation tests
 
 }
