--- a/UI/build.gradle
+++ b/UI/build.gradle
@@ -31,7 +31,7 @@ android {
         compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.3"
+        kotlinCompilerExtensionVersion = "1.5.4"
     }
 }
 
@@ -66,6 +66,7 @@ dependencies {
     implementation("androidx.appcompat:appcompat:1.6.1")
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation("androidx.navigation:navigation-ui-ktx:2.7.5")
+    implementation 'androidx.compose.material3:material3-android:1.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
