--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ android.nonFinalResIds=true
 android.enableJetifier=true
 FOLDER_ID="1QrdfGX3EvIwn6xuU_XkUtUVk4kCM4mlz"
 FOLDER_IMG_ID="103hskrx0o8C10Ncu5KaTxyMPFkwCVFGX"
+FOLDER_ID_DOC="1QrdfGX3EvIwn6xuU_XkUtUVk4kCM4mlz"
 URL_INITIAL="https://drive.google.com/uc?export=download&id="
 APPLICATION_NAME="TorresSanSebastian"
 MIME_TYPE_IMAGE="mimeType='image/jpeg'"
