--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,15 @@ android {
     defaultConfig {
         applicationId "co.japl.android.torressansebastian"
         minSdk 26
-        targetSdk 33
-        versionCode 1_01_9_30
-        versionName "V1.01.9 build 30 Se agrega pantallas para pqrs y visualizador de archivos"
+        targetSdk 34
+        versionCode 1_02_3_33
+        versionName "V1.02.3 build 33 Ajustes visualizacionde menus y carga de imagenes en pantalla principal."
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables{
             useSupportLibrary = true
         }
+
     }
 
     buildTypes {
@@ -30,11 +31,13 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "FMC_TOPIC", "\"allUsers\""
         }
         debug {
-            shrinkResources true
-            minifyEnabled true
+            shrinkResources false
+            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "FMC_TOPIC", "\"development\""
         }
     }
     compileOptions {
@@ -46,7 +49,7 @@ android {
     }
 
     composeOptions{
-        kotlinCompilerExtensionVersion '1.4.3'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     buildFeatures {
         compose true
@@ -59,7 +62,7 @@ android {
     }
 
     composeOptions{
-        kotlinCompilerExtensionVersion '1.4.3'
+        kotlinCompilerExtensionVersion '1.5.4'
     }
 
     packaging{
@@ -68,8 +71,10 @@ android {
             excludes += 'jetified-httpclient-4.5.14.jar'
         }
     }
-    packagingOptions{
-        exclude 'META-INF/DEPENDENCIES'
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
 }
 
@@ -81,34 +86,34 @@ dependencies {
     implementation(project(":urtss-android-core"))
     implementation(project(":connect-gdrive"))
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.credentials:credentials:1.2.2'
-    implementation 'androidx.credentials:credentials-play-services-auth:1.2.2'
-    implementation 'androidx.compose.foundation:foundation:1.5.4'
+    implementation 'androidx.credentials:credentials:1.3.0'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.3.0'
+    implementation 'androidx.compose.foundation:foundation:1.7.3'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.activity:activity-compose:1.8.1'
+    implementation 'androidx.activity:activity-compose:1.9.2'
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
 
-    implementation 'androidx.compose.compiler:compiler:1.5.4'
-    implementation 'androidx.compose.material:material:1.5.4'
+    implementation 'androidx.compose.compiler:compiler:1.5.15'
+    implementation 'androidx.compose.material:material:1.7.3'
     implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.compose.material:material-icons-core:1.5.4'
-    implementation 'androidx.compose.material:material-icons-extended:1.5.4'
+    implementation 'androidx.compose.material:material-icons-core:1.7.3'
+    implementation 'androidx.compose.material:material-icons-extended:1.7.3'
 
     implementation platform('androidx.compose:compose-bom:2023.03.00')
 
     implementation("com.google.maps.android:maps-compose:2.11.4")
-    implementation("com.google.android.gms:play-services-maps:18.2.0")
-    implementation("com.google.android.play:integrity:1.3.0")
+    implementation("com.google.android.gms:play-services-maps:19.0.0")
+    implementation("com.google.android.play:integrity:1.4.0")
 
-    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    implementation platform('com.google.firebase:firebase-bom:33.4.0')
     implementation("com.google.api-client:google-api-client-android:2.0.0")
-
+    implementation('com.google.firebase:firebase-messaging-ktx')
     implementation("com.google.firebase:firebase-crashlytics-ktx")
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation("com.google.firebase:firebase-database-ktx")
@@ -117,28 +122,31 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.5.0")
 
     implementation("com.google.dagger:hilt-android:2.48")
+    implementation 'androidx.work:work-runtime-ktx:2.9.1'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.3'
+    implementation 'androidx.hilt:hilt-common:1.2.0'
     kapt("com.google.dagger:hilt-android-compiler:2.48")
     implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
 
-    implementation 'androidx.compose.runtime:runtime-livedata:1.5.4'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.7.3'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.6'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.6'
 
-    implementation 'androidx.compose.runtime:runtime-rxjava3:1.5.4'
+    implementation 'androidx.compose.runtime:runtime-rxjava3:1.7.3'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.2'
 
-    implementation("androidx.hilt:hilt-navigation-compose:1.1.0")
+    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     androidTestImplementation 'androidx.compose.ui:ui-tooling'
     androidTestImplementation 'androidx.compose.ui:ui-test-manifest'
-    androidTestImplementation platform("androidx.compose:compose-bom:2024.04.01")
+    androidTestImplementation platform("androidx.compose:compose-bom")
     // For instrumentation tests
 
 }
