--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
+    id 'com.google.dagger.hilt.android'
     id 'dagger.hilt.android.plugin'
     id 'com.google.firebase.crashlytics'
-
+    id 'org.jetbrains.kotlin.plugin.compose' version "2.0.0"
 }
 
 android {
@@ -80,74 +81,41 @@ android {
 
 dependencies {
 
-    implementation project(":UI")
+    implementation project(":ui")
     implementation(project(":ScheduleModule"))
     implementation(project(":japl-android-about-module"))
     implementation(project(":urtss-android-core"))
     implementation(project(":connect-gdrive"))
 
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.core:core-splashscreen:1.0.1'
-    implementation 'androidx.credentials:credentials:1.3.0'
-    implementation 'androidx.credentials:credentials-play-services-auth:1.3.0'
-    implementation 'androidx.compose.foundation:foundation:1.7.3'
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.activity:activity-compose:1.9.2'
+    implementation libs.android.core.ktx
+    implementation libs.bundles.android.credentials
+    implementation libs.bundles.android.compose.ui
 
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation libs.bundles.android.core
 
-    implementation 'androidx.compose.compiler:compiler:1.5.15'
-    implementation 'androidx.compose.material:material:1.7.3'
-    implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.compose.material:material-icons-core:1.7.3'
-    implementation 'androidx.compose.material:material-icons-extended:1.7.3'
+    implementation libs.bundles.android.compose
+    implementation platform(libs.android.compose.bom)
+    
+    implementation libs.bundles.google.android
 
-    implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation platform(libs.google.firebase.bom)
+    implementation libs.bundles.google.firebase
 
-    implementation("com.google.maps.android:maps-compose:2.11.4")
-    implementation("com.google.android.gms:play-services-maps:19.0.0")
-    implementation("com.google.android.play:integrity:1.4.0")
+    implementation libs.hilt.android
+    implementation libs.android.work.runtime.ktx
+    implementation(libs.bundles.android.hilt)
+    ksp libs.hilt.compiler
+    ksp libs.hilt.android.compiler
+    implementation libs.bundles.compose.materials
 
-    implementation platform('com.google.firebase:firebase-bom:33.4.0')
-    implementation("com.google.api-client:google-api-client-android:2.0.0")
-    implementation('com.google.firebase:firebase-messaging-ktx')
-    implementation("com.google.firebase:firebase-crashlytics-ktx")
-    implementation("com.google.firebase:firebase-analytics-ktx")
-    implementation("com.google.firebase:firebase-database-ktx")
+    implementation libs.bundles.android.lifecycle
 
+    implementation libs.android.constraintlayout
+    implementation libs.bundles.android.navigation 
 
-    implementation("io.coil-kt:coil-compose:2.5.0")
-
-    implementation("com.google.dagger:hilt-android:2.48")
-    implementation 'androidx.work:work-runtime-ktx:2.9.1'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.3'
-    implementation 'androidx.hilt:hilt-common:1.2.0'
-    kapt("com.google.dagger:hilt-android-compiler:2.48")
-    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
-
-    implementation 'androidx.compose.runtime:runtime-livedata:1.7.3'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.6'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.6'
-
-    implementation 'androidx.compose.runtime:runtime-rxjava3:1.7.3'
-
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.8.2'
-
-    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    androidTestImplementation 'androidx.compose.ui:ui-tooling'
-    androidTestImplementation 'androidx.compose.ui:ui-test-manifest'
-    androidTestImplementation platform("androidx.compose:compose-bom")
-    // For instrumentation tests
+    testImplementation libs.junit
+    androidTestImplementation libs.bundles.android.test
+    androidTestImplementation platform(libs.android.compose.test.bom)
 
 }
 
