--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.4.2'
@@ -15,9 +16,11 @@ buildscript {
 plugins {
     id 'com.android.application' version '8.5.2' apply false
     id 'com.android.library' version '8.5.2' apply false
-    id("org.jetbrains.kotlin.android") version "1.9.20" apply false
-    id("com.google.dagger.hilt.android") version "2.44" apply false
+    id("org.jetbrains.kotlin.android") version "2.0.21" apply false
     id 'com.google.gms.google-services' version '4.4.2' apply false
+    id('com.google.devtools.ksp') version "2.0.21-1.0.25" apply false
+    id("com.google.dagger.hilt.android") version "2.48" apply false
+  //  id('dagger.hilt.android.plugin') version "2.48" apply false
 
 }
 
