--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -16,4 +16,12 @@ jobs:
 
       - name: Check files in main Folder
         run: ls 
-      
+
+      - name: Get japl-android-about-module
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ github.actor }}/japl-android-about-module
+          path: japl-android-about-module
+
+      - name: Check files in main Folder
+        run: ls 
