--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -57,8 +57,12 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Graddle Validations
-        uses: gradle/actions/wrapper-validation@v4
+      - name: Setup Graddle And Validations
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: build and scan
+        run: ./gradlew build --scan
+      
 
       
       - name: Check files in main Folder
