--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -61,7 +61,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: build and scan
-        run: ./gradlew build --scan
+        run: ./gradlew build --scan --warning-mode all
       
 
       
