--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -23,6 +23,7 @@ jobs:
               rm -rf ScheduleModule
               rm -rf connect-gdrive
               rm -rf japl-android-graphs
+              rm -rf ./connect-gdrive/src/main/res/raw
 
       - name: Get japl-android-about-module
         uses: actions/checkout@v4
@@ -66,6 +67,8 @@ jobs:
       - name: Copy Values on project
         run: |
               cp ./japl-properties/torressansebastian/google_services.json ./app/google-services.json
+              mkdir ./connect-gdrive/src/main/res/raw
+              cp ./japl-properties/alameda181/credentials.json ./connect-gdrive/src/main/res/raw/
               rm -rf ./japl-properties
 
       - name: Check files in main Folder
