--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -14,4 +14,6 @@ jobs:
     
     - name: Get project settings
       uses: ./.github/actions/prepare
+      with:
+        secret-token: ${{ secrets.GH_PROPERTIES_CONNECT }}
       
